# pubcookie

./: Makefile.in  Makefile.in.ap1  Makefile.in.ap2  Makefile.tmpl.in  aclocal.m4  configure  configure.ac  index.html  mod_pubcookie.exp  modules.mk  params.json  pubcookie-vitki.spec  stamp-h.in  vitki-makedist.sh
cgic/: CHANGES  Makefile.in  capture.c  cgic.c  cgic.h  cgictest.c  testform.html
doc/: .indent.pro  CHANGES.txt  CREDITS.txt  HACKING.txt  config.html  config.login.sample  config.sample  install-filter.html  install-login.html  install-mod_pubcookie-3.0.html  install-mod_pubcookie.html  krb5-getcred.html  mod_pubcookie-directives.html  pubcookie.css  templates.html
relay/: Makefile.am  Makefile.in  README  boot  configure  configure.in  hello.tpl  index.cgi.c  toapp.tpl  tologin.tpl
src/: Makefile.tmpl  base64.c  capture_cmd_output.c  check_crypted_blob.c  config.h.in  flavor.c  flavor.h  flavor_basic.c  flavor_getcred.c  flavor_uwsecurid.c  html.h  index.cgi.c  index.cgi.h  keyclient.c  keyserver.c  libpubcookie.c  libpubcookie.h  mod_pubcookie.c  mod_pubcookie.h  ntmpl.c  pbc_apacheconfig.c  pbc_apacheconfig.h  pbc_config.h  pbc_configure.c  pbc_configure.h  pbc_create.c  pbc_logging.c  pbc_logging.h  pbc_myconfig.c  pbc_myconfig.h  pbc_path.h.in  pbc_time.c  pbc_time.h  pbc_verify.c  pbc_version.h  pbc_version.h.in  pubcookie-capacity  pubcookie.h  security.c  security.h  (+15 more)
src/Win32/: LICENSE.rtf  PubCookieFilter.cpp  PubCookieFilter.def  PubCookieFilter.h  PubCookieFilter.h.in  PubCookieFilter.opt  PubCookieFilter.rc  PubCookieFilter.rc.in  PubCookieFilter.sln  PubCookieFilter.vcproj  WebClient.c  WebClient.h  debug.c  debug.h  getopt.c  html.cpp  html.h  keyclient.opt  keyclient.sln  keyclient.vcproj  keys.cpp  keys.h  keys.txt  pbc_messages.dsp  pbc_messages.h  pbc_messages.mc  pbc_messages.vcproj  resource.h  winkeyclient.c  winkeyclient.h
src/Win32/WebApp/: Default.asp
src/Win32/WebApp/app-and-clearlogin-logout/: Default.asp
src/Win32/WebApp/app-and-redirect-logout/: Default.asp
src/Win32/WebApp/app-only-logout/: Default.asp  Dumpvars.asp
src/Win32/include/openssl/: opensslconf.h
src/Win32/installer/: Setup.rul  addappmap.vbs  addfiltertometabaseenum.vbs  addfiltertometabasemain.vbs  delappmap.vbs  delfiltertometabasemain.vbs  exampleinstall.bat  find_webroot.vbs  pubcookie.ism  setiisscript.vbs
src/Win32/lib/: libeay32.lib  openssl.cnf  ssleay32.lib
src/Win32/pbcgui/: CPBC_PropSheet.cpp  CPBC_PropSheet.h  basesnap.Cpp  basesnap.h  extend.h  globals.h  gui_myconfig.cpp  pbcgui-directive.vcproj  pbcgui-server.vcproj  pbcgui.sln  registry.Cpp  registry.h
src/Win32/pbcgui/directive/: GUIDs.h  directive.Cpp  pbc_directives.h  resource.Rc  resource.h
src/Win32/pbcgui/server/: GUIDs.h  pbc_directives.h  resource.Rc  resource.h  server.cpp
src/Win32/relay/: debug.c  relay.sln  relay.vcproj
src/contrib/: pubcookie-authn-api.txt
src/contrib/CVS/: Entries  Repository  Root
src/contrib/cmu_kerberos/CVS/: Repository
src/contrib/index.cgi_ldap/: Makefile.index.cgi  diff.index.cgi.c  diff.index.cgi.h  diff.mod_pubcookie.c  index.cgi.c  index.cgi.h  index.cgi_ldap.c  login-server-ldap.txt  mod_pubcookie.c  pbc_config.h  pubcookie_ldap_modifications.txt
src/contrib/index.cgi_ldap/CVS/: Entries  Repository
src/contrib/nginx-module-pubcookie/: CHANGES  LICENSE  config  ngx_http_auth_pubcookie_module.c
src/login_templates.cmu/: NOTES  README  error  form_expired  login  login_bad_auth  login_cache_creds_wrong  login_expired  login_nolcookie  login_part1  login_part2  login_user_form_field  logout_already_weblogin  logout_app  logout_app_custom  logout_part1  logout_part2  logout_postscript_still_others  logout_postscript_still_weblogin  logout_still_weblogin  logout_time_remaining  logout_weblogin  nonpost_redirect  notok_part1  notok_part2  ok_browsers  pinit_response1  pinit_response2  status  welcome_back
src/login_templates.generic/: README  copyright  error  form_expired  login  login_auth_prob_uwsecurid  login_bad_auth  login_bad_auth_uwsecurid  login_bad_auth_uwsecurid_static_user  login_cache_creds_wrong  login_expired  login_next_prn  login_nolcookie  login_pass_form_field  login_pass_static  login_pinit  login_reauth  login_unauth_grant  login_user_form_field  login_user_hidden  login_user_static  login_uwsecurid  logo  logout_already_weblogin  logout_app  logout_app_custom  logout_part1  logout_part2  logout_postscript_still_others  logout_postscript_still_weblogin  logout_still_known  logout_still_weblogin  logout_time_remaining  logout_weblogin  nonpost_redirect  notok  notok_badagent  notok_form_multipart  notok_generic  notok_need_ssl  (+4 more)
src/login_templates.generic/media/: pubcookie.css
src/login_templates.uw/: README  logout_already_weblogin  logout_app  logout_app_custom_prefix  logout_app_custom_suffix  logout_part1  logout_part2  logout_postscript_still_others  logout_postscript_still_weblogin  logout_still_weblogin  logout_time_remaining  logout_weblogin  nonpost_redirect  notok_need_ssl  notok_part1  notok_part2  pinit_responce2  status_part1_with_countdown  welcome_back
src/misc_patches/: 20000407fmf.txt  MaxwallChristopher-03May2004-no_dupe_verion_string.diff  cookie_blanking_patch.apache1.3.6  fmf_recipe.txt  junk  pubcookie-nokrbclean.patch  pubcookie_tgt_no_addrs.diff
src/nginx/: Makefile  README  auth.php  config  nginx-dummy-try-files-0.8.52.patch  nginx-vitki.spec  nginx.spec  ngx_http_pubcookie.h  ngx_http_pubcookie_library.c  ngx_http_pubcookie_module.c  pbc_path.h
